<resources>
    <string name="app_name">GEOFLYInspira</string>
    <!-- Shared strings -->
    <string name="s_load_info">Cargar información</string>
    <string name="s_about">Acerca de...</string>
    <string name="s_logout">Salir</string>
    <string name="btn_select_file">Seleccionar</string>
    <string name="btn_save">Guardar</string>

    <!-- Main Screen -->
    <string name="s_btn_inspirePhotos">Fotos Inspiradoras</string>

    <!-- LoadCsvActivity's strings -->
    <string name="s_titulo_actividad">Cargar datos</string>
    <string name="s_lbl_fligh_records">Registro de Vuelo</string>
    <string name="s_lbl_pictures">Imágenes</string>
    <string name="s_lbl_path">Ruta del archivo: </string>


    <string name="s_titulo_about">Acerca de</string>
    <string name="s_scrollbar_text">GeoFlyInspira es una Fundación dedicada a inspirar y dar visibilidad a procesos y propuestas de valor e innovación mediante el uso de las Tecnologías de la Información y Comunicaciones – TIC; resaltando historias inspiradoras que impactan en acciones trascendentes en la humanidad, generando procesos de emprendimiento, unión y desarrollo del territorio en los diferentes contextos sociales, aportando en la potencialización de ciudadanos integrales que construyan mejores realidades pensando en el bien común.</string>

    <!-- PhotoListActivity's strings -->
    <string name="title_activity_photo_list">Seleccione una imágen</string>
    <string name="title_activity_photo_details">Detalles</string>
    <string name="s_altitude">Altitud</string>
    <string name="s_latitude">Latitud</string>
    <string name="s_longitude">Longitud</string>
    <string name="s_captureDate">Fecha de captura</string>
    <string name="s_description">Descripción</string>
    <string name="s_view_on_maps">Ver en mapa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Vista en mapas</string>

</resources>
