<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_inspired_photos"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="1"
        android:title="@string/s_btn_inspirePhotos"
        app:showAsAction="ifRoom" />

    <!-- These options, should always be in the overflow -->
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/s_about"
        android:orderInCategory="2"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/s_logout"
        android:orderInCategory="3"
        app:showAsAction="never"/>
</menu>