<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/s_altitude"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/tv_altitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="300 20 1111" />

        <TextView
            android:id="@+id/tv_view_on_maps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:autoLink="map"
            android:pointerIcon="hand"
            android:text="@string/s_view_on_maps"
            android:textColor="@color/colorAccent"
            android:textStyle="bold|italic"
            android:onClick="onClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/s_latitude"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="300 20 1111" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/s_longitude"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="300 20 1111" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/s_captureDate"
            android:textColor="?colorPrimary" />

        <TextView
            android:id="@+id/tv_captureDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="300 20 1111" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/s_description"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="@string/s_scrollbar_text" />

</LinearLayout>
