<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
    <TextView
        android:text="@string/s_lbl_fligh_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/s_lbl_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:id="@+id/lbl_path_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_loadFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_select_file"
            android:layout_gravity="right"
            android:textColor="@color/colorTextSecond"
            android:background="@color/colorMountain"
            android:padding="10dp"
            android:onClick="onClick"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/s_lbl_pictures"
            android:textSize="20sp" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"></ListView>

        <Button
            android:id="@+id/btn_loadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/colorMountain"
            android:onClick="onClick"
            android:padding="10dp"
            android:text="@string/btn_select_file"
            android:textColor="@color/colorTextSecond" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/geo_fly_icon" />
</LinearLayout>